benchmarks and ox 0.0.10