@@ -2,7 +2,7 @@ ThisBuild / version := "0.1.0-SNAPSHOT"
 
 ThisBuild / scalaVersion := "3.3.0"
 
-libraryDependencies += "com.softwaremill.ox" %% "core" % "0.0.9"
+libraryDependencies += "com.softwaremill.ox" %% "core" % "0.0.10"
 libraryDependencies += "ch.qos.logback" % "logback-classic" % "1.2.10"
 libraryDependencies += "com.typesafe.scala-logging" %% "scala-logging" % "3.9.4"
 
@@ -23,3 +23,7 @@ lazy val root = (project in file("."))
   .settings(
     name := "ox-playground"
   )
+
+javaOptions ++= Seq(
+  "--enable-preview", "--add-modules=jdk.incubator.concurrent"
+)
